--- a/AndroidUI/res/drawable/my_border.xml
+++ b/AndroidUI/res/drawable/my_border.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"> 
-    <stroke android:width="4dp" android:color="#FF00FF00" /> 
+    <stroke android:width="2dp" android:color="#FF00FF00" /> 
     <padding android:left="7dp" android:top="7dp" 
             android:right="7dp" android:bottom="7dp" /> 
-    <corners android:radius="4dp" /> 
+    <corners android:radius="0dp" />
+    <solid android:color="#00FFFFFF" /> 
 </shape> 
 
